name:            helf
version:         1.0.20240318
x-revision:      1
build-type:      Simple
cabal-version:   >= 1.10
license:         MIT
license-file:    LICENSE
author:          Andreas Abel and Nicolai Kraus
maintainer:      Andreas Abel <andreas.abel@ifi.lmu.de>
homepage:        http://www2.tcs.ifi.lmu.de/~abel/projects.html#helf
category:        Dependent types
synopsis:        Typechecking terms of the Edinburgh Logical Framework (LF).
description:
  HELF = Haskell implementation of the Edinburgh Logical Framework
  .
  HELF implements only a subset of the Twelf syntax and functionality.
  It type-checks LF definitions, but does not do type reconstruction.

tested-with:
  GHC == 9.10.1
  GHC == 9.8.2
  GHC == 9.6.6
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

data-files:         test/succeed/Makefile
                    test/succeed/*.elf
                    test/fail/Makefile
                    test/fail/*.elf
                    test/fail/*.err

extra-source-files: Makefile
                    src/Makefile
                    README.md
                    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/andreasabel/helf

executable helf
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:    Abstract
                    ClosVal
                    Closures
                    Concrete
                    Context
                    DataStructure
                    DatastrucImpl.List
                    DatastrucImpl.StrictDynArray
                    Fresh
                    HerBruijn
                    HerBruijnVal
                    Lexer
                    ListEnv
                    LocallyNamelessSyntax
                    MapEnv
                    MonoVal
                    Monolith
                    NamedExplSubst
                    ORef
                    OperatorPrecedenceParser
                    OrderedCom2
                    OrderedComplex2
                    Parser
                    PrettyM
                    ScopeMonad
                    Scoping
                    Signature
                    TGChecker
                    TermGraph
                    TheMonad
                    TypeCheck
                    Util
                    Value
  build-depends:
      base         >= 4.9      && < 5
    , array        >= 0.3      && < 1
    , bytestring   >= 0.10.0.0 && < 1
        -- bytestring-0.10.0.0 is shipped with GHC 7.6
    , containers   >= 0.3      && < 1
    , mtl          >= 2.2.1    && < 3
    , pretty       >= 1.0      && < 2
    , text         >= 1.0.0.1  && < 3
        -- text-1.0.0.1 fixes a regression in decodeUtf8
    , transformers >= 0.2      && < 1
  build-tool-depends:
      happy:happy  >= 1.18.10  && < 3
        -- happy-1.18.10 has fixes for GHC 7.6.3
    , alex:alex    >= 3.4.0.0  && < 4
        -- alex-3.4.0.0 has posn-strict-text wrapper

  default-language: Haskell2010
  default-extensions:
                    MultiParamTypeClasses
                    FunctionalDependencies
                    UndecidableInstances
                    OverlappingInstances
                    TypeSynonymInstances
                    FlexibleInstances
                    FlexibleContexts
                    GeneralizedNewtypeDeriving
                    TupleSections
  other-extensions: InstanceSigs

  ghc-options:
    -rtsopts
    -Wcompat
